[metadata]
name = spyro
version = 0.0.0
author = Remington Mallett
author_email = mallett.remy@gmail.com
description = Respiration analyses in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remrama/spyro
project_urls =
    Homepage = https://github.com/remrama/spyro
    Source = https://github.com/remrama/spyro
    Bug Tracker = https://github.com/remrama/spyro/issues
    Release Notes = https://github.com/remrama/spyro/releases
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research

[options]
python_requires = >=3.8
install_requires =
    matplotlib
    numpy
    pandas
    scipy

[options.extras_require]
port_triggers =
    psychopy
